# research-copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: SYSTEM_DESIGN.md
eval/: golden_set.jsonl  results.md  run_eval.py
src/research_copilot/: config.py
src/research_copilot/agents/: graph.py  nodes.py
src/research_copilot/api/: main.py
src/research_copilot/ingestion/: chunker.py  openalex.py
src/research_copilot/llm/: provider.py
src/research_copilot/retrieval/: grader.py  hybrid.py  rewriter.py
src/research_copilot/validation/: citations.py  grounding.py
ui/: app.py
