[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-copilot"
version = "0.1.0"
description = "Research copilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "qdrant-client",
    "sentence-transformers",
    "rank_bm25",
    "httpx",
    "fastapi",
    "uvicorn",
    "streamlit",
    "ragas",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_copilot"]
